Ready to launch

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -54,4 +54,4 @@ artifacts:
   files: build.json
 env:
   parameter-store:         
-    JWT_SECRET: JWT_SECRET
+    JWT_SECRET: a_top_top_secret_jwt_token
